# fastapi-clickhouse-postgres-pattern

./: .cursorrules  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  db_schema.html  deploy.bat  deploy.sh  docker-compose.yml  docker-entrypoint.sh  poetry.toml  processing_flow.html  pyproject.toml  run.bat  run.py  run.sh
.rules/: architecture.md  clickhouse.md  coding_standards.md
migrations/: env.py
migrations/versions/: 000000000001_initial_template.py  5cb1a2074af1_final_sync_for_clean_template.py
scripts/: check_migrations.ps1  check_migrations.py  deploy.py  generate_openapi.py  generate_schema.py  init_clickhouse.py  serve_schema.py
src/: main.py
src/admin/: filters.py  reports.py  views.py
src/api/v1/: api.py
src/core/: config.py  repository.py
src/db/: session.py
src/db/clickhouse/: client.py
src/db/mariadb/: session.py
src/db/postgres/: session.py
src/modules/auth/login/: router.py
src/modules/clickhouse/analytics/: router.py  schemas.py  service.py
src/modules/dashboard/sheets/: router.py
src/modules/filters/: models.py
src/modules/mariadb/products/: models.py  repository.py  router.py  schemas.py  service.py
src/modules/postgres/filters/: models.py
src/modules/postgres/reports/: models.py
src/modules/postgres/users/: models.py  repository.py  router.py  service.py
src/modules/reports/: models.py
src/modules/users/: models.py  repository.py  router.py  schemas.py  service.py
