[tool.poetry]
name = "fastapi-pattern-2026"
version = "0.1.0"
description = "Universal FastAPI Template with Scalable Modular Architecture"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = "^0.30.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
alembic = "^1.14.0"
pydantic = {extras = ["email"], version = "^2.9.0"}
pydantic-settings = "^2.5.0"
sqladmin = {extras = ["asyncio"], version = "^0.20.0"}
clickhouse-connect = "^0.8.0"
psycopg = {extras = ["binary"], version = "^3.2.0"}
python-multipart = "^0.0.12"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
black = "^24.1.1"
isort = "^5.13.2"
mypy = "^1.8.0"
ruff = "^0.3.0"
pre-commit = "^3.6.2"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = ["E501", "B008"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
