[project]
name = "fastapi-pattern-2026"
version = "0.1.0"
description = "Universal FastAPI Template with Scalable Modular Architecture"
authors = [{name = "Your Name", email = "you@example.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "alembic>=1.14.0",
    "pydantic[email]>=2.9.0",
    "pydantic-settings>=2.5.0",
    "sqladmin[asyncio]>=0.20.0",
    "clickhouse-connect>=0.8.0",
    "psycopg[binary]>=3.2.0",
    "python-multipart>=0.0.12",
    "httpx>=0.27.0",
    "aiomysql>=0.2.0",
    "cryptography>=42.0.0"
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "black>=24.1.1",
    "isort>=5.13.2",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
    "pre-commit>=3.6.2"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = ["E501", "B008"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
